--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,6 +22,7 @@
 //Import site layouts
 @import 'layout/footer';
 @import 'layout/header';
+@import 'layout/social';
 
 //Import pages
 // @import 'pages/page';
