--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -39,7 +39,7 @@ h6,
 h1,
 .h1 {
     color: $color-main;
-    font-family: $f-SemiBold;
+    font-family: $f-bold;
     font-size: 25px;
     font-weight: normal;
     line-height: normal;
@@ -54,7 +54,7 @@ h1,
 
 h2,
 .h2 {
-    font-family: $f-SemiBold;
+    font-family: $f-bold;
     font-size: 25px;
     font-weight: normal;
     line-height: 30px;
@@ -72,7 +72,7 @@ h2,
 h3,
 .h3 {
     color: $color-main;
-    font-family: $f-SemiBold;
+    font-family: $f-bold;
     font-size: 18px;
     font-weight: normal;
     line-height: 1.25em;
