--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -247,10 +247,10 @@
         font-family: $alias;
         font-style: normal;
         font-weight: normal;
-        src: url('../files/fonts/'+$family+'/'+$name+'.eot') format('eot'),
-            url('../files/fonts/'+$family+'/'+$name+'.ttf') format('ttf'),
-            // url('../files/fonts/' + $family + '/' + $name + '.woff2') format('woff2'),
-                url('../files/fonts/'+$family+'/'+$name+'.woff') format('woff');
+        src: url('../fonts/' + $family + '/' + $name + '.eot') format('eot'),
+            url('../fonts/' + $family + '/' + $name + '.ttf') format('ttf'),
+            url('../fonts/' + $family + '/' + $name + '.woff2') format('woff2'),
+            url('../fonts/' + $family + '/' + $name + '.woff') format('woff');
         font-display: swap;
     }
 }
@@ -269,25 +269,5 @@
         top: 50%;
         left: 50%;
         transform: translate(-51%, -50%);
-    }
-}
-
-//Font Awesome
-@mixin fa($family: 'regular') {
-    @if $family == 'light' {
-        font-family: 'Font Awesome 5 Pro';
-        font-weight: 300;
-    }
-    @if $family == 'regular' {
-        font-family: 'Font Awesome 5 Pro';
-    }
-    @if $family == 'solid' {
-        font-family: 'Font Awesome 5 Pro';
-        font-style: normal;
-        font-weight: 900;
-    }
-    @if $family == 'brand' {
-        font-family: 'Font Awesome 5 Brands';
-        font-weight: 300;
     }
 }
