--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -22,6 +22,9 @@
         @include xs-block() {
             padding: 0 10px;
         }
+
+        &.social .social__item {
+        }
     } //.footer__social
 
     .container {
@@ -32,10 +35,11 @@
 } //.footer
 
 .footer-item {
-    @include col;
-    @include size(3);
-    @include size-sm(6);
-    @include size-xs(12);
+    box-sizing: border-box;
+    width: calc(25% - 20px);
+    margin-right: 10px;
+    margin-left: 10px;
+    word-wrap: break-word;
 
     @include respond-to(sm) {
         margin-bottom: $gutter;
@@ -44,6 +48,7 @@
     @include xs-block() {
         width: 100%;
         margin: 0;
+        padding: 20px;
 
         & + & {
             margin-top: 0;
@@ -60,7 +65,8 @@
 
     &__title {
         font-family: $f-bold;
-        font-weight: 500;
+        font-weight: normal;
+        text-transform: uppercase;
 
         @include xs-block() {
             padding-left: 10px;
@@ -78,7 +84,8 @@
     }
 
     &__list {
-        @include flexColumn;
+        display: flex;
+        flex-direction: column;
 
         @include xs-block() {
             padding-left: 10px;
@@ -86,10 +93,19 @@
     } //.footer-item__list
 
     &__el {
+        display: flex;
+        align-items: center;
         color: $color-text;
         font-size: 14px;
         letter-spacing: 0.5px;
-        @include flexCenter;
+
+        & .phone__desc {
+            display: block;
+            color: #aeaeae;
+            font-size: 9px;
+            line-height: 1.4;
+            text-transform: uppercase;
+        }
 
         & + & {
             margin-top: 10px;
@@ -98,6 +114,7 @@
 
     &__link {
         color: $color-text;
+        font-family: $f;
         font-size: 14px;
         letter-spacing: 0.5px;
 
@@ -107,11 +124,13 @@
     } //.footer-item__link
 
     &__icon {
+        width: 18px;
+        height: 18px;
         margin-right: 10px;
-        font-size: 18px;
 
-        &.fa-map-marker-alt {
-            margin-left: 2px;
+        svg {
+            width: 18px;
+            height: 18px;
         }
     } //.footer-item__icon
 } //.footer-item
