--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,11 +17,14 @@
 // @import 'components/pagination';
 
 //Import main styles
-// @import 'main';
+@import 'main';
 
 //Import site layouts
+@import 'layout/city';
 @import 'layout/footer';
 @import 'layout/header';
+@import 'layout/nav';
+@import 'layout/search';
 @import 'layout/social';
 
 //Import pages
