--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,4 +3,136 @@
     top: 0;
     left: 0;
     width: 100%;
+
+    &__in {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        max-width: 1440px;
+        height: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    &__bottom {
+        position: relative;
+        z-index: 10;
+        height: 80px;
+        transition: all 0.35s ease;
+        background-color: #f6f6f6;
+
+        @include xs-block() {
+            height: 50px;
+        }
+    }
+
+    &__city {
+        margin-right: 60px;
+    }
+
+    &__phone {
+        margin-left: auto;
+        color: #fff;
+        font-family: roboto-300, sans-serif;
+        font-size: 14px;
+        line-height: 30px;
+    }
+
+    &__nav {
+        display: none;
+
+        @include xs-block() {
+            display: block;
+        }
+    }
+
+    &__logo {
+        width: 190px;
+        height: 36px;
+
+        svg {
+            width: inherit;
+            height: inherit;
+        }
+    }
+
+    &__search {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &-top {
+        background-color: #565656;
+        color: #fff;
+
+        @include md-block() {
+            display: none;
+        }
+    }
 } //.header
+
+.logo {
+    display: inline-block;
+    width: 190px;
+
+    @include xs-block() {
+        width: 150px;
+    }
+}
+
+.hamburger {
+    display: flex;
+    align-items: center;
+    width: 28px;
+    height: 28px;
+    margin-right: 15px;
+}
+
+.hamburger span {
+    position: relative;
+    display: block;
+    transition: all 0.3s;
+}
+
+.hamburger span,
+.hamburger span::after,
+.hamburger span::before {
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background-color: #565656;
+}
+
+.hamburger span::after,
+.hamburger span::before {
+    content: ' ';
+    position: absolute;
+    top: 9px;
+    left: 0;
+    backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: all 0.35s ease;
+}
+
+.hamburger span::after {
+    top: -9px;
+}
+
+.hamburger.is-active span {
+    background-color: transparent;
+}
+
+.hamburger.is-active span::before {
+    top: 0px;
+    transform: rotate(45deg) translate(0px);
+}
+
+.hamburger.is-active span::after {
+    top: 0px;
+    transform: rotate(-45deg) translate(0px, 0px);
+}
