--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -91,3 +91,717 @@
         }
     }
 }
+
+.nav-main {
+    position: relative;
+    transition: $trsMenu;
+    border-bottom: 1px solid $color-border--light;
+    background-color: #fff;
+
+    @include sm-block() {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: z(modal-overlay);
+        width: 300px;
+        background-color: #949494;
+        will-change: transform;
+        @include trfX(-300px);
+        @include trans(transform);
+    }
+
+    @include i5-block() {
+        width: 270px;
+        @include trfX(-270px);
+    }
+
+    &__scroll,
+    &__inner {
+        @include xs-block() {
+            display: block;
+            height: 100%;
+            @include scroll;
+        }
+    } //.nav-main__scroll
+
+    &__list {
+        height: 95px;
+        transition: height 0.5s linear;
+        @include container;
+        // position: relative;
+        @include flex;
+
+        @include sm-block() {
+            flex-direction: column;
+            height: auto;
+            padding: 0;
+            background-color: #fff;
+        }
+
+        &--sub {
+            display: none;
+
+            @include sm-block() {
+                display: block;
+                background-color: #949494;
+
+                .nav-main {
+                    &__item {
+                        border-color: $color-border--dark;
+
+                        &::after {
+                            display: none;
+                        }
+                    }
+
+                    &__link {
+                        color: #fff;
+                        font-family: $f-light;
+                        font-size: 14px;
+
+                        &:hover {
+                            background-color: $color-main;
+                        }
+                    }
+                }
+            }
+        } //.nav-main__list--sub
+    } //.nav-main__list
+
+    &__item {
+        justify-content: center;
+        min-width: 125px;
+        @include flexCenter;
+
+        @include sm-block() {
+            display: block;
+            padding: 0;
+            border-bottom: 1px solid $color-border--lighten;
+        }
+
+        &:hover {
+            @include min-screen(769) {
+                .nav-main {
+                    //&__dropdown.on {
+                    //    display: block;
+                    //}
+
+                    // &__link {
+
+                    //     &::before {
+                    //         display: block;
+                    //     }
+                    // }
+
+                    &__text {
+                        color: $color-accent;
+                    }
+
+                    &__icon {
+                        fill: $color-accent;
+                    }
+                }
+            }
+        }
+
+        & .nav-main {
+            &__dropdown.on {
+                display: block;
+            }
+        }
+
+        &.is-active {
+            .nav-main {
+                &__dropdown {
+                    @include trfX(0);
+                }
+
+                &__text {
+                    color: $color-accent;
+                }
+
+                &__icon {
+                    fill: $color-accent;
+                }
+            }
+        }
+
+        &.is-open {
+            .nav-main__link {
+                &::before {
+                    content: '\f068';
+                }
+            }
+        }
+
+        &--dropdown {
+            &:hover {
+                @include min-screen(769) {
+                    .nav-main {
+                        &__link {
+                            &::before {
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        } //.nav-main__item--dropdown
+
+        &--lk {
+            // background-color: $color-accent;
+
+            .nav-main {
+                &__icon {
+                    fill: #fff;
+                }
+
+                &__text {
+                    color: #fff;
+                }
+
+                &__link {
+                    font-family: $f-light;
+
+                    .fal {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        margin-left: 1px;
+                        color: #fff;
+                    }
+
+                    .fa-angle-right {
+                        margin-left: auto;
+                    }
+                }
+            }
+
+            .nav-dropdown {
+                z-index: z(lk);
+            }
+        } //.nav-main__item--lk
+    } //.nav-main__item
+
+    &__link {
+        position: relative;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        @include flexColumn;
+
+        @include sm-block() {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 10px 15px;
+        }
+
+        @include xs-block() {
+            &[data-accordeon-title] {
+                &::before {
+                    content: '\f067';
+                    right: 15px;
+                    bottom: auto;
+                    left: auto;
+                    display: block;
+                    width: auto;
+                    height: auto;
+                    border: 0;
+                    color: $gray;
+                    font-size: 16px;
+                    @include fa('light');
+                    @include centre('y');
+                }
+            }
+
+            &.bg-color--accent {
+                &::before {
+                    color: #fff;
+                }
+            }
+        }
+
+        &::before {
+            content: '';
+            bottom: 0;
+            display: none;
+            @include arr(20, 10, $color-bg--lighten, t);
+            @include vx;
+        }
+
+        .fal {
+            margin-left: auto;
+            @include min-screen(769) {
+                display: none;
+            }
+        }
+    } //.nav-main__link
+
+    &__text {
+        position: relative;
+        top: 0;
+        display: block;
+        transition: top 0.35s linear;
+        font-family: $f-bold;
+        font-size: 14px;
+        text-transform: uppercase;
+
+        @include sm-block() {
+            font-family: $f;
+            font-size: 16px;
+            text-transform: initial;
+        }
+
+        @include i5-block() {
+            font-size: 15px;
+        }
+    } //.nav-main__text
+
+    &__icon {
+        width: 45px;
+        height: 45px;
+        margin-bottom: 5px;
+        transition: fill 0.35s ease, opacity 0.2s linear, visibility 0.2s linear;
+
+        @include sm-block() {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+            margin-bottom: 0;
+        }
+    } //.nav-main__icon
+
+    &__dropdown {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        display: none;
+        width: 100%;
+
+        @include sm-block() {
+            top: 100px;
+            @include listPosition;
+        }
+
+        @include xs-block() {
+            position: static;
+            display: block;
+            transform: none;
+            transition: none;
+        }
+    } //.nav-main__dropdown
+
+    &__top-line {
+        position: relative;
+        height: 50px;
+        padding: 0 15px;
+        background-color: $color-bg--lighten;
+        @include flexCenter;
+
+        @include min-screen(769) {
+            display: none;
+        }
+    } //.nav-main__top-line
+
+    &__btn {
+        &--close {
+            position: absolute;
+            top: 0;
+            right: -50px;
+            z-index: 333;
+            align-items: center;
+            width: 50px;
+            min-width: auto;
+            height: 50px;
+            padding-top: 5px;
+            border: 0;
+            background-color: $gray--lightest;
+            cursor: pointer;
+            @include flexColumn;
+
+            span {
+                font-size: 10px;
+                text-transform: uppercase;
+            }
+        } //.nav-main__btn--close
+
+        &_icon {
+            width: 20px;
+            height: 20px;
+            margin: auto;
+            fill: #fff;
+        } //.nav-main__btn_icon
+    } //.nav-main__btn
+
+    &.is-active {
+        box-shadow: 0 10px 20px rgba(#000, 0.5);
+        @include trfX(0);
+
+        .nav-main__btn--close {
+            background-color: $color-accent;
+            box-shadow: 20px 0 25px rgba(0, 0, 0, 0.3);
+
+            span {
+                color: #fff;
+            }
+        } //.nav-main.is-active .nav-main__btn--close
+
+        .hamburger {
+            background-color: $color-accent;
+
+            span {
+                &::before,
+                &::after {
+                    background-color: #fff;
+                }
+            }
+        } //.nav-main.is-active .hamburger
+    } //.nav-main.is-active
+
+    .city {
+        color: $color-text;
+        font-size: 15px;
+
+        &__link {
+            max-width: 150px;
+            border-bottom: 1px dashed $color-border;
+            color: $color-text;
+            font-family: $f-medium;
+            font-size: 15px;
+            @include text-overflow();
+        }
+    } //.nav-main__city
+
+    .phone {
+        margin-left: auto;
+        font-family: $f-medium;
+        font-size: 15px;
+    } //.nav-main__phone
+
+    [data-accordeon-title] {
+        &:hover,
+        &:focus {
+            color: $color-text;
+        }
+    }
+} //.nav-main
+
+@mixin listPosition {
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    padding: 0;
+    transition: all 0.35s cubic-bezier(0.25, 0.8, 0.4, 0.95);
+    background-color: #fff;
+    @include trfX(-100vw);
+}
+
+.nav-dropdown {
+    z-index: 333;
+    padding: 30px 0;
+    background-color: $color-bg--lighten;
+
+    &__items {
+        height: auto;
+        max-width: 1440 px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 15 px;
+        padding-right: 15 px;
+        display: flex;
+        flex-direction: column;
+    } //.nav-dropdown__items
+
+    &__columns {
+        display: block;
+        columns: auto 6;
+
+        // @include row-flex;
+
+        @include xs-block() {
+            margin-right: 0;
+            margin-left: 0;
+            border-radius: $border-radius * 2;
+            background-color: #ececec;
+        }
+
+        @include sm-block() {
+            columns: auto;
+            background-color: #fff;
+        }
+
+        @include xs-block() {
+            columns: auto;
+        }
+
+        .nav-dropdown__item {
+            display: inline-block;
+            width: 100%;
+            padding: 0 0 20px 15px;
+            vertical-align: top;
+
+            @include xs-block() {
+                padding: 0;
+            }
+        }
+    } //.nav-dropdown__columns
+
+    &__item {
+        position: relative;
+        display: inline-block;
+        padding: 0 0 15px;
+        vertical-align: top;
+
+        @include sm-block() {
+            display: block;
+            padding: 0;
+        }
+
+        @include xs-block() {
+            & + .nav-dropdown__item {
+                border-top: 1px solid #fff;
+            }
+        }
+
+        &:not(&:first-child) {
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: -10px;
+                display: block;
+                width: 1px;
+                height: 100%;
+                background-color: $gray--light;
+            }
+        }
+
+        &.is-active {
+            .nav-dropdown--sub {
+                @include trfX(0);
+            }
+        }
+
+        &.is-open {
+            .nav-dropdown__title {
+                &::before {
+                    content: '\f068';
+                }
+            }
+        }
+    } //.nav-dropdown__item
+
+    &__title {
+        display: inline-block;
+        margin-bottom: 5px;
+        font-family: $f-bold;
+        font-size: 14px;
+
+        @each $theme, $icon in $nav-lk-icons {
+            &--#{$theme} {
+                &::after {
+                    content: $icon;
+                }
+            }
+        }
+
+        @include sm-block() {
+            // border-bottom: 1px solid $color-border--lighten;
+            position: relative;
+            display: block;
+            margin-bottom: 0;
+            padding: 15px 15px 15px 55px;
+            font-family: $f;
+
+            &:not(.nav-dropdown__title--link, .nav-dropdown__title--back) {
+                font-size: 16px;
+
+                &::before {
+                    content: '\f067';
+                    right: 10px;
+                }
+            }
+
+            &[data-accordeon-title] {
+                &::before {
+                    content: '\f067';
+                    right: 15px;
+                    left: auto;
+                    border: 0;
+                    font-size: 16px;
+                    @include fa('light');
+                    @include vy;
+                }
+            }
+        }
+
+        &::after {
+            left: 23px;
+            font-family: fal;
+            font-size: 16px;
+            @include vy;
+        }
+
+        &--order {
+            &::after {
+                left: 20px;
+            }
+        }
+
+        &--link,
+        &--back {
+            border-bottom: 1px solid $color-border--lighten;
+            @include min-screen(769) {
+                display: none;
+            }
+
+            &::before {
+                content: '\f104';
+                left: 10px;
+            }
+        }
+
+        &--temp {
+            display: none;
+            @include sm-block() {
+                display: block;
+                background-color: $color-bg--light;
+                text-transform: uppercase;
+
+                &::before {
+                    display: none;
+                }
+            }
+        }
+    } //.nav-dropdown__title
+
+    &--sub {
+        @include sm-block() {
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            // position: absolute;
+            // @include listPosition;
+            // top: 107px;
+            // z-index: z(absolute);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        }
+
+        & + & {
+            margin-left: 15px;
+        }
+
+        li {
+            min-width: 120px;
+            font-size: 13px;
+
+            @include sm-block() {
+                // text-align: center;
+                position: relative;
+                display: block;
+                margin-bottom: 0;
+                padding-left: 30px;
+                font-family: $f;
+                font-size: 15px;
+
+                // &::before {
+                //     content: '\f067';
+                //     font-family: faL;
+                //     font-size: 14px;
+                //     @include vy;
+                //     right: 10px;
+                // }
+
+                & + li {
+                    border-top: 1px solid #fff;
+                }
+            }
+        }
+
+        a {
+            @include sm-block() {
+                display: block;
+                padding: 15px;
+            }
+        }
+
+        &[data-accordeon-content] {
+            @include sm-block() {
+                border-radius: $border-radius * 2;
+                background-color: #e1e1e1;
+            }
+        }
+    } //.nav-dropdown--sub
+
+    &--more {
+        opacity: 0.8;
+        color: $color-accent;
+        font-family: $f;
+        font-size: 12px;
+    } // .nav-dropdown--more
+} //.nav-dropdown
+
+.hamburger {
+    display: none;
+    width: 32px;
+    height: 28px;
+    padding: 0;
+    border: 0;
+    outline: none;
+    background-color: $gray--lightest;
+
+    @include sm-block() {
+        display: block;
+    }
+
+    span {
+        position: relative;
+        top: -9px;
+        display: block;
+        width: 100%;
+        height: 2px;
+        transition: all 0.3s;
+        border-radius: 2px;
+        // backface-visibility: hidden;
+        background-color: $color-text;
+
+        &::after,
+        &::before {
+            content: ' ';
+            position: absolute;
+            top: 9px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            backface-visibility: hidden;
+            transition: all 0.35s ease;
+            border-radius: 2px;
+            background-color: $color-text;
+        }
+
+        &::after {
+            top: 18px;
+        }
+
+        &::before {
+        }
+    }
+
+    &.is-active {
+        span {
+            background-color: transparent;
+
+            &::before {
+                transform: rotate(45deg) translate(-1px, 0);
+            }
+
+            &::after {
+                transform: rotate(-45deg) translate(6px, -7px);
+            }
+        }
+    }
+} //.hamburger
