--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,7 +12,7 @@
 
 //Import site components
 // @import 'components/breadcrumbs';
-// @import 'components/buttons';
+@import 'components/buttons';
 // @import 'components/input';
 // @import 'components/pagination';
 
@@ -24,8 +24,10 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/nav';
+@import 'layout/products';
 @import 'layout/search';
 @import 'layout/social';
 
 //Import pages
+@import 'pages/catalog';
 // @import 'pages/page';
