--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -7,7 +7,7 @@ strong {
 
 a {
     outline: none;
-    color: $color-accent;
+    color: $color-text;
     text-decoration: none;
     @include tr;
 
