--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,8 @@
 .header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 12;
     width: 100%;
 
     &__in {
@@ -25,6 +26,10 @@
         background-color: #f6f6f6;
 
         @include xs-block() {
+            height: 50px;
+        }
+
+        .is-fixed & {
             height: 50px;
         }
     }
@@ -71,6 +76,10 @@
         color: #fff;
 
         @include md-block() {
+            display: none;
+        }
+
+        .is-fixed & {
             display: none;
         }
     }
