--- a/src/scss/layout/_search.scss
+++ b/src/scss/layout/_search.scss
@@ -43,7 +43,9 @@
             }
         }
     }
-} // .search
+}
+
+// .search
 
 .search .search__form_close {
     position: absolute;
@@ -58,6 +60,7 @@
     cursor: pointer;
 }
 @media screen and (max-width: 768px) {
+
     .search__form_close {
         right: 45px;
     }
@@ -244,6 +247,7 @@
     border-right: 1px solid #d7d7d7;
 }
 @media screen and (max-width: 1024px) {
+
     .search__result__wrap_section.search__result__wrap_section_aside {
         display: none;
     }
