--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -8,9 +8,9 @@
     border: 0;
     border-radius: 2px;
     outline: none;
-    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 12px 0 rgb(0 0 0 / 20%);
     color: #565656;
-    font-family: roboto-500, sans-serif;
+    font-family: $f-medium;
     font-size: 15px;
     letter-spacing: 0.3px;
     line-height: 44px;
@@ -294,7 +294,7 @@
     background-color: transparent;
     box-shadow: none;
     color: #8f446a;
-    font-family: roboto-400, sans-serif;
+    font-family: $f;
     font-size: 16px;
     letter-spacing: 0;
     text-transform: none;
@@ -338,28 +338,11 @@
     line-height: 43px;
     text-align: center;
 }
-@media screen and (max-width: 480px) {
 
+@media screen and (max-width: 480px) {
     .btn-animate {
         padding: 0;
     }
-}
-
-.btn-animate:not(.is-ready).is-error::before,
-.btn-animate:not(.is-ready).is-success::before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -10px;
-    margin-left: -11px;
-    animation: btsStatusAnimation 0.3s ease-in forwards;
-    animation: btsStatusAnimation 0.3s ease-in forwards;
-    color: #fff;
-    font-family: Font Awesome\5 Pro;
-    font-size: 22px;
-    font-weight: 300;
-    line-height: 1;
-    text-align: center;
 }
 
 .btn-animate:not(.is-ready).is-error .btn__title,
@@ -367,35 +350,8 @@
     transform: translateY(-150%);
 }
 
-.btn-animate:not(.is-ready).is-success::before {
-    content: '\f00c';
-}
-
 .btn-animate:not(.is-ready).is-error {
     background-color: #ff0600;
-}
-
-.btn-animate:not(.is-ready).is-error::before {
-    content: '\f06a';
-}
-
-.btn-animate:not(.is-ready) .btn__title {
-    display: none;
-}
-
-.btn-animate.is-animate::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    background-image: url(/_nuxt/img/ecfcebe.gif);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: contain;
 }
 
 .btn-animate.is-animate .btn__title {
@@ -417,41 +373,14 @@
     background-color: transparent;
 }
 
-.button-icon--fav::before {
-    color: #565656;
-    font-size: 37px;
-}
-
-.button-icon--fav::after,
-.button-icon--fav::before {
-    content: '\f004';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: Font Awesome\5 Pro;
-    font-style: normal;
-    font-weight: 900;
-}
-
-.button-icon--fav::after {
-    font-size: 32px;
-}
-
-.button-icon--fav.is-checked::after,
-.button-icon--fav.is-checked::before {
-    color: #8f446a;
-    font-family: faS;
-}
-
 .button-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
     text-align: center;
 }
-@media screen and (max-width: 480px) {
 
+@media screen and (max-width: 480px) {
     .button-box {
         flex-wrap: wrap;
         justify-content: center;
@@ -480,8 +409,8 @@
     display: flex;
     justify-content: center;
 }
-@media (max-width: 480px) {
 
+@media (max-width: 480px) {
     .button-box .button-animate {
         width: 80%;
     }
@@ -490,8 +419,8 @@
 .button-box .button-animate + .button-animate {
     margin-left: 30px;
 }
-@media (max-width: 480px) {
 
+@media (max-width: 480px) {
     .button-box .button-animate + .button-animate {
         margin-top: 15px;
         margin-left: 0;
