--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,16 +1,17 @@
 .footer {
     padding: 35px 0;
     background-color: $color-bg--light;
+
     @include nosel;
 
-    @include xs-block() {
+    @include xs-block {
         padding: 5px 0;
     }
 
     &__in {
         @include row-flex;
 
-        @include xs-block() {
+        @include xs-block {
             margin-right: 0;
             margin-left: 0;
         }
@@ -19,7 +20,7 @@
     &__social {
         margin-top: 20px;
 
-        @include xs-block() {
+        @include xs-block {
             padding: 0 10px;
         }
 
@@ -28,7 +29,7 @@
     } //.footer__social
 
     .container {
-        @include xs-block() {
+        @include xs-block {
             padding: 0;
         }
     }
@@ -45,7 +46,7 @@
         margin-bottom: $gutter;
     }
 
-    @include xs-block() {
+    @include xs-block {
         width: 100%;
         margin: 0;
         padding: 20px;
@@ -57,6 +58,7 @@
     }
 
     &:not(:first-child) {
+
         .footer-item__link {
             font-size: 12px;
             text-transform: uppercase;
@@ -68,7 +70,7 @@
         font-weight: normal;
         text-transform: uppercase;
 
-        @include xs-block() {
+        @include xs-block {
             padding-left: 10px;
 
             &::before {
@@ -78,7 +80,7 @@
     } //.footer-item__title
 
     &__content {
-        @include xs-block() {
+        @include xs-block {
             margin-bottom: 15px;
         }
     }
@@ -87,7 +89,7 @@
         display: flex;
         flex-direction: column;
 
-        @include xs-block() {
+        @include xs-block {
             padding-left: 10px;
         }
     } //.footer-item__list
