--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -1,31 +1,44 @@
 .products {
+
     &__wrap {
         display: flex;
         flex-wrap: wrap;
-        margin-left: -10px;
         margin-right: -10px;
+        margin-left: -10px;
     }
 
     &-item {
-        background-color: #fff;
-        display: inline-block;
+        position: relative;
+        z-index: 10;
         box-sizing: border-box;
-        word-wrap: break-word;
+        display: inline-block;
         width: calc(25% - 20px);
         margin-right: 10px;
         margin-bottom: 30px;
         margin-left: 10px;
-        position: relative;
         transition: none;
-        z-index: 10;
+        background-color: #fff;
+        word-wrap: break-word;
 
-        @include xs-block() {
+        @include xs-block {
             width: calc(50% - 20px);
         }
 
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            display: none;
+            width: 100%;
+            height: 100%;
+            box-shadow: 0 20px 30px rgb(0 0 0 / 25%);
+        }
+
         &:hover {
-            color: #565656;
             z-index: 11;
+            color: #565656;
 
             &::after {
                 display: block;
@@ -40,47 +53,35 @@
             }
         }
 
-        &::after {
-            content: '';
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            box-shadow: 0 20px 30px rgba(0, 0, 0, 0.25);
-        }
-
         &__img {
-            border: 1px solid #aeaeae;
+            position: relative;
             margin-bottom: 10px;
             padding: 10px;
-            position: relative;
+            border: 1px solid #aeaeae;
         }
 
         &__fav {
-            color: #fff;
             position: absolute;
-            right: 18px;
             top: 15px;
+            right: 18px;
             z-index: 11;
-
             width: 32px;
             height: 32px;
+            color: #fff;
 
             &.on {
+
                 svg {
-                    fill: $color-accent;
                     stroke: transparent;
+                    fill: $color-accent;
                 }
             }
 
             svg {
                 width: inherit;
                 height: inherit;
+                stroke: rgb(0 0 0 / 10%);
                 fill: white;
-                stroke: rgba(0, 0, 0, 0.1);
             }
         }
 
@@ -96,25 +97,25 @@
         }
 
         &__title {
+            margin-bottom: 0;
             font-family: $f-bold;
             font-size: 14px;
             font-weight: normal;
             letter-spacing: 0.24px;
-            margin-bottom: 0;
             text-transform: uppercase;
             white-space: normal;
 
-            @include xs-block() {
+            @include xs-block {
                 margin-bottom: 5px;
                 text-align: center;
             }
         }
 
         &__price {
+            color: #787878;
             font-family: $f-medium;
             font-size: 18px;
             text-align: center;
-            color: #787878;
 
             span {
                 font-family: $f;
@@ -123,15 +124,15 @@
         }
 
         &__more {
-            background-color: #fff;
-            box-shadow: 0 35px 30px rgba(0, 0, 0, 0.4);
-            display: none;
-            left: 0;
-            padding: 0 10px 10px;
             position: absolute;
             top: 100%;
-            width: 100%;
+            left: 0;
             z-index: 11;
+            display: none;
+            width: 100%;
+            padding: 0 10px 10px;
+            background-color: #fff;
+            box-shadow: 0 35px 30px rgb(0 0 0 / 40%);
         }
 
         &__btn {
