--- a/src/scss/pages/_catalog.scss
+++ b/src/scss/pages/_catalog.scss
@@ -1,47 +1,48 @@
 .catalog {
+
     &__wrap {
-        align-items: flex-start;
         display: flex;
+        align-items: flex-start;
         justify-content: space-between;
         margin-bottom: 50px;
 
-        @include xs-block() {
+        @include xs-block {
             flex-direction: column;
             padding-top: 0;
         }
     }
 
     &__title {
-        justify-content: center;
+        position: relative;
         display: flex;
         align-items: center;
+        justify-content: center;
         margin: 30px 0 20px;
-        position: relative;
 
         h1 {
-            @include xs-block() {
-                font-size: 18px;
+            @include xs-block {
                 margin: 0 auto;
+                font-size: 18px;
                 text-transform: uppercase;
             }
         }
     }
 
     &__back {
-        padding: 0 10px;
         position: relative;
-        display: none;
         top: 2px;
+        display: none;
+        padding: 0 10px;
 
-        @include sm-block() {
+        @include sm-block {
             position: absolute;
             top: 50%;
-            transform: translateY(-50%);
             left: -10px;
             display: block;
+            transform: translateY(-50%);
         }
 
-        @include xs-block() {
+        @include xs-block {
             top: 12px;
         }
 
@@ -53,45 +54,57 @@
     }
 
     &__top-line {
-        border-bottom: 1px dashed #aeaeae;
-        margin-bottom: 30px;
-        padding-bottom: 6px;
         display: flex;
         align-items: center;
+        margin-bottom: 30px;
+        padding-bottom: 6px;
+        border-bottom: 1px dashed #aeaeae;
     }
 
     &__count {
         font-size: 13px;
 
-        @include xs-block() {
+        @include xs-block {
             display: none;
         }
     }
 
     &__sorting {
-        width: auto;
         display: flex;
         align-items: center;
+        width: auto;
+    }
+
+    &__content {
+        position: relative;
+        width: calc(100% - 280px);
+        margin-top: 23px;
+        margin-left: auto;
+
+        @include xs-block {
+            width: 100%;
+            margin-top: 0;
+        }
     }
 
     &-filter {
-        margin-right: 30px;
         width: 250px;
+        margin-right: 30px;
 
         &__in {
-            margin-bottom: 40px;
             margin-top: 30px;
+            margin-bottom: 40px;
         }
 
         &__header {
-            border-bottom: 1px solid #e1e1e1;
-            left: 0;
-            padding: 3.5px 10px;
             position: fixed;
             top: 0;
-            width: 100%;
+            left: 0;
             display: flex;
             align-items: center;
+            width: 100%;
+            padding: 3.5px 10px;
+            border-bottom: 1px solid #e1e1e1;
         }
 
         &__title {
@@ -100,33 +113,21 @@
         }
 
         &__subtitle {
+            padding: 10px;
             font-size: 12px;
             letter-spacing: 0.5px;
-            padding: 10px;
             text-transform: uppercase;
         }
 
         &__item {
-            background-color: #fff;
-            border: 1px solid #aeaeae;
             margin-bottom: 20px;
+            border: 1px solid #aeaeae;
+            background-color: #fff;
 
             &_scroll {
-                overflow-y: scroll;
                 max-height: 275px;
+                overflow-y: scroll;
             }
-        }
-    }
-
-    &__content {
-        margin-left: auto;
-        margin-top: 23px;
-        position: relative;
-        width: calc(100% - 280px);
-
-        @include xs-block() {
-            margin-top: 0;
-            width: 100%;
         }
     }
 } // .catalog
@@ -136,12 +137,12 @@
 
     &__title {
         flex: 1;
-        font-size: 13px;
-        margin-right: 10px;
         margin-top: -2px;
+        margin-right: 10px;
+        font-size: 13px;
         white-space: nowrap;
 
-        @include xs-block() {
+        @include xs-block {
             display: none;
         }
     }
