--- a/src/scss/layout/_city.scss
+++ b/src/scss/layout/_city.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     color: #fff;
-    font-family: roboto-300, sans-serif;
+    font-family: $f-light;
     font-size: 13px;
 
     &__text {
