--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -15,11 +15,11 @@ main {
         &:hover {
             color: $color-text;
         }
-    } //.page-banner__link
+    } // .page-banner__link
 
     &__content {
         // @include flexCenter;
-    } //.page-banner__content
+    } // .page-banner__content
 
     strong {
         font-family: $f-bold;
@@ -32,7 +32,7 @@ main {
             margin-top: 15px;
         }
     }
-} //.page-banner
+} // .page-banner
 
 .conditions {
     line-height: 30px;
@@ -54,7 +54,7 @@ main {
 
 .conditions__link {
     color: #fff;
-    font-family: roboto-300, sans-serif;
+    font-family: $f-light;
     font-size: 13px;
 }
 
