--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,35 +1,35 @@
-@import "helpers/all";
-@import "generated/all";
-@import "base/all";
+@import 'helpers/all';
+@import 'generated/all';
+@import 'base/all';
 
-//Libs
+// Libs
 
 // @import 'swiper/swiper-bundle.min';
 // @import '_lib/_jquery.fancybox';
 
-//Customization libs
-@import "custom";
+// Customization libs
+// @import 'custom';
 
-//Import site components
+// Import site components
 // @import 'components/breadcrumbs';
-@import "components/buttons";
+@import 'components/buttons';
 
 // @import 'components/input';
 // @import 'components/pagination';
 
-//Import main styles
-@import "main";
+// Import main styles
+@import 'main';
 
-//Import site layouts
-@import "layout/city";
-@import "layout/footer";
-@import "layout/header";
-@import "layout/nav";
-@import "layout/products";
-@import "layout/search";
-@import "layout/social";
+// Import site layouts
+@import 'layout/city';
+@import 'layout/footer';
+@import 'layout/header';
+@import 'layout/nav';
+@import 'layout/products';
+@import 'layout/search';
+@import 'layout/social';
 
-//Import pages
-@import "pages/catalog";
+// Import pages
+@import 'pages/catalog';
 
 // @import 'pages/page';
