--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -25,7 +25,7 @@
         }
 
         &::after {
-            content: "";
+            content: '';
             position: absolute;
             top: 0;
             left: 0;
