Work for Catalog

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,6 +13,7 @@
 // Import site components
 // @import 'components/breadcrumbs';
 @import 'components/buttons';
+@import 'components/checkbox';
 
 // @import 'components/input';
 // @import 'components/pagination';
