--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -74,7 +74,7 @@
             padding: 0 4px;
             border-radius: 8px;
             background: $color-accent;
-            box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             color: #fff;
             font-size: 12px;
             font-weight: 500;
@@ -187,7 +187,7 @@
 
         .is-fixed & {
             visibility: hidden;
-            opacity: 0%;
+            opacity: 0;
         }
     }
 
@@ -221,6 +221,7 @@
 
 .nav-dropdown {
     z-index: 333;
+    padding: 15px 0;
     background-color: #f6f6f6;
 
     &__items {
@@ -238,6 +239,13 @@
     &__columns {
         display: block;
         column-count: 6;
+
+        &.column-5 {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+            column-count: 5;
+        }
 
         .nav-dropdown__item {
             display: inline-block;
@@ -260,7 +268,8 @@
         padding: 0 0 15px;
         vertical-align: top;
 
-        &:not(.nav-dropdown__item:first-child)::before {
+        &::before {
+            // &:not(.nav-dropdown__item:first-child)::before {
             content: '';
             position: absolute;
             top: 0;
@@ -270,6 +279,39 @@
             height: 100%;
             background-color: #e1e1e1;
         }
+
+        &:first-child::before {
+            @include xs-block() {
+                display: none;
+            }
+        }
+    }
+
+    &__color {
+        display: flex;
+        align-items: center;
+
+        &::before {
+            display: none !important;
+        }
+
+        ins {
+            width: 16px;
+            height: 16px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        span {
+            margin-left: 10px;
+            font-family: $f;
+            font-size: 14px;
+        }
+    }
+
+    &__inner {
+        display: flex;
+        align-items: center;
     }
 
     &--sub li {
@@ -277,3 +319,59 @@
         font-size: 13px;
     }
 } // .nav-dropdown
+
+.nav-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    &__item {
+        margin-right: 9px;
+        padding: 5px 25px;
+
+        // border: 1px solid #e9ecff;
+
+        border-radius: 2px;
+        background-color: rgba(163, 70, 125, 0.2);
+        font-size: 14px;
+        cursor: pointer;
+
+        &.on {
+            background-color: rgba($color-accent, 1);
+            color: #fff;
+        }
+    }
+
+    &__icon {
+        display: flex;
+        align-items: center;
+        padding: 5px 15px;
+        background-color: transparent;
+
+        .icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 26px;
+            height: 26px;
+            border-radius: 13px;
+            background-color: $color-accent;
+
+            &.sale {
+                background-color: #ff0a49;
+            }
+        }
+
+        svg {
+            width: 20px;
+            height: 20px;
+            fill: #fff;
+        }
+
+        span {
+            margin-left: 10px;
+            color: $color-accent;
+        }
+    }
+} // .nav-tabs
